unpackaged/objects/Discount_row__c.object
<CustomObject>
  <fields>
    <fullName>Allowed_discount__c</fullName>
    <label>Allowed discount</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Discount_Model__c</fullName>
    <label>Discount Model</label>
    <referenceTo>Discount_model__c</referenceTo>
    <relationshipLabel>Discount row</relationshipLabel>
    <relationshipName>Discount_row</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Discount_lever__c</fullName>
    <label>Discount lever</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Revenue: materials</fullName>
        </value>
        <value>
          <fullName>Revenue: equipments &amp; instruments</fullName>
        </value>
        <value>
          <fullName>Implant: materials</fullName>
        </value>
        <value>
          <fullName>Implants: equipments &amp; instruments</fullName>
        </value>
        <value>
          <fullName>Abutments: materials</fullName>
        </value>
        <value>
          <fullName>Abutments: equipments &amp; instruments</fullName>
        </value>
        <value>
          <fullName>Pooled implant order: Material</fullName>
        </value>
        <value>
          <fullName>Pooled implant order: Equipment</fullName>
        </value>
        <value>
          <fullName>Payment type</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Equals__c</fullName>
    <label>Equals</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Max_perc__c</fullName>
    <label>Max (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Min__c</fullName>
    <label>Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Min_perc__c</fullName>
    <label>Min (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Payment_terms_months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allowed payment terms (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Discount row</label>
  <nameField>
    <displayFormat>A-{0000}</displayFormat>
    <label>Discount row Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Discount row</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>